--- a/css/style.css
+++ b/css/style.css
@@ -1082,6 +1082,9 @@ html .ui-button.ui-state-disabled:active {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 18px;
+	display: flex;
+	justify-content: center;
+	width: 11px;
 }
 
 .left-sidebar .accordion-statistiks {
