--- a/css/style.css
+++ b/css/style.css
@@ -1674,7 +1674,8 @@ td {
 	color: var(--white);
 	font-weight: 600;
 	line-height: 0 !important;
-	text-align: center;
+	margin-left: 1px;
+	margin-top: 1px;
 }
 
 .tournament-table tbody .status-boxes .silver-box {
